gccida/c3/dwarf2out_begin_prologue
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:2553:12: error: expected expression
*( _OWORD *)&v3[v6].dw_fde_current_label = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:2553:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v3[v6].dw_fde_current_label = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:2560:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = 0LL; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:2563:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:2570:3: error: use of undeclared identifier 'line_info_table_in_use'; did you mean 'fde_table_in_use'?
++line_info_table_in_use; 
  ^~~~~~~~~~~~~~~~~~~~~~
  fde_table_in_use
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:245:17: note: 'fde_table_in_use' declared here
static unsigned fde_table_in_use;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:2572:3: error: use of undeclared identifier 'separate_line_info_table_in_use'
++separate_line_info_table_in_use; 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:4121:17: error: static declaration of 'lookup_filename' follows non-static declaration
static unsigned lookup_filename         PARAMS ((const char *));
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/dwarf2out.c:2568:6: note: previous implicit declaration is here
v8 = lookup_filename( file); 
     ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_begin_prologue/src/obj/dwarf2out.o] Error 1
